more cleaning up
git-svn-id: https://svn.apache.org/repos/asf/maven/repository-manager/trunk@360028 13f79535-47bb-0310-9956-ffa450edef68